--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
 <div id="result" style="display:none;"></div>
 
 <script>
-const NUM_EASY=5,NUM_MID=10,NUM_ADV=5;
 let questions=[],current=0,score=0;
 
 document.querySelectorAll('.tag-btn').forEach(btn=>{
@@ -65,12 +64,24 @@ async function loadCSV(file){
   const text=await (await fetch(file)).text();
   return text.trim().split(/\r?\n/).slice(1).map(line=>{
     const c=line.split(",");
-    return {q:c[1],options:c.slice(2,6),answer:+c[6]-1,explanation:c[7],difficulty:(c[9]||'').trim()};
+    return {
+      q: c[1],
+      options: c.slice(2,6),
+      answer: +c[6]-1,
+      explanation: c[7],
+      difficulty: (c[8]||'').trim()
+    };
   });
 }
 
-function shuffle(a){for(let i=a.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1));[a[i],a[j]]=[a[j],a[i]];}return a;}
-function pick(pool,d,n){return shuffle(pool.filter(q=>q.difficulty===d)).slice(0,n);}
+function shuffle(a){
+  for(let i=a.length-1;i>0;i--){
+    const j=Math.floor(Math.random()*(i+1));
+    [a[i],a[j]]=[a[j],a[i]];
+  }
+  return a;
+}
+
 function csvFileName(tag){
   return {
     info1:'info1.csv',
@@ -82,9 +93,9 @@ function csvFileName(tag){
 
 async function startQuiz(tag){
   document.getElementById('controls').style.display='none';
-  document.getElementById('mainTitle').style.display='none'; // ← タイトル非表示
+  document.getElementById('mainTitle').style.display='none'; // タイトル非表示
   const pool=await loadCSV(csvFileName(tag));
-  questions=shuffle(pool).slice(0,20); // 各授業20問固定（必要に応じて調整可）
+  questions=shuffle(pool).slice(0,25); // 各授業25問固定
   current=score=0;
   document.getElementById('result').style.display='none';
   document.getElementById('quiz').style.display='';
@@ -113,7 +124,9 @@ function selectAnswer(idx){
   });
   const quiz=document.getElementById('quiz');
   const msg=document.createElement('p');
-  msg.innerHTML=(idx===q.answer?(score++,'<span style="color:green">🟢 正解！</span>'):`<span style="color:red">❌ 不正解</span><br><span style="color:#555">正解: ${q.options[q.answer]}</span>`);
+  msg.innerHTML=(idx===q.answer
+    ? (score++,'<span style="color:green">🟢 正解！</span>')
+    : `<span style="color:red">❌ 不正解</span><br><span style="color:#555">正解: ${q.options[q.answer]}</span>`);
   const exp=document.createElement('p'); exp.textContent="解説: "+q.explanation;
   quiz.append(msg,exp);
   const next=document.getElementById('nextBtn');
@@ -130,7 +143,7 @@ function showResults(){
   r.innerHTML=`<h2>結果: ${score}/${questions.length}</h2>`;
   r.style.display='';
   document.getElementById('controls').style.display='';
-  document.getElementById('mainTitle').style.display='block'; // ← タイトル再表示
+  document.getElementById('mainTitle').style.display='block'; // タイトル再表示
 }
 </script>
 </body>
