Enhance CSV loading and answer selection logic
Updated CSV loading function to handle variable options and added error handling. Improved readability of answer selection logic.

--- a/index.html
+++ b/index.html
@@ -5,32 +5,32 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
 <title>2学期末試験対策</title>
 <style>
-  body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-    margin: 0;
-    padding: 0.5rem;
-    background: #f9f9f9;
-    color: #333;
-    font-size: 18px;   /* スマホ向けに18px基準 */
-    line-height: 1.6;
-  }
-  h1 { text-align:center; font-size:1.8rem; margin:0.5rem 0 1rem; }
-  .tag-btn, #nextBtn {
-    display:block; width:100%; padding:1rem; margin:0.4rem 0;
-    border:1px solid #ccc; border-radius:6px; font-size:1.1rem; background:#fff;
-  }
-  #question { margin:0.8rem 0; font-size:1.2rem; line-height:1.6; }
-  #options { list-style:none; padding:0; margin:0; }
-  #options li { margin-bottom:0.5rem; }
-  #options button {
-    width:100%; padding:1rem; font-size:1.1rem;
-    border:1px solid #ccc; border-radius:6px; background:#fff; text-align:left;
-  }
-  #options button:disabled { opacity:0.7; }
-  #progress { font-size:0.9rem; text-align:center; margin:0.8rem 0; }
-  #result h2 { text-align:center; margin-top:1.5rem; }
-  #nextBtn { background:#0078d7; color:#fff; display:none; }
-  #nextBtn:hover { background:#005a9e; }
+  body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+    margin: 0;
+    padding: 0.5rem;
+    background: #f9f9f9;
+    color: #333;
+    font-size: 18px;   /* スマホ向けに18px基準 */
+    line-height: 1.6;
+  }
+  h1 { text-align:center; font-size:1.8rem; margin:0.5rem 0 1rem; }
+  .tag-btn, #nextBtn {
+    display:block; width:100%; padding:1rem; margin:0.4rem 0;
+    border:1px solid #ccc; border-radius:6px; font-size:1.1rem; background:#fff;
+  }
+  #question { margin:0.8rem 0; font-size:1.2rem; line-height:1.6; }
+  #options { list-style:none; padding:0; margin:0; }
+  #options li { margin-bottom:0.5rem; }
+  #options button {
+    width:100%; padding:1rem; font-size:1.1rem;
+    border:1px solid #ccc; border-radius:6px; background:#fff; text-align:left;
+  }
+  #options button:disabled { opacity:0.7; }
+  #progress { font-size:0.9rem; text-align:center; margin:0.8rem 0; }
+  #result h2 { text-align:center; margin-top:1.5rem; }
+  #nextBtn { background:#0078d7; color:#fff; display:none; }
+  #nextBtn:hover { background:#005a9e; }
 </style>
 </head>
 <body>
@@ -38,17 +38,17 @@
 <h1 id="mainTitle">2学期末試験対策</h1>
 
 <div id="controls">
-  <button class="tag-btn" data-tag="info1">情報I</button>
-  <button class="tag-btn" data-tag="info2">情報II</button>
-  <button class="tag-btn" data-tag="appA">アプリA</button>
-  <button class="tag-btn" data-tag="appB">アプリB</button>
+  <button class="tag-btn" data-tag="info1">情報I</button>
+  <button class="tag-btn" data-tag="info2">情報II</button>
+  <button class="tag-btn" data-tag="appA">アプリA</button>
+  <button class="tag-btn" data-tag="appB">アプリB</button>
 </div>
 
 <div id="quiz" style="display:none;">
-  <div id="question"></div>
-  <ul id="options"></ul>
-  <div id="progress"></div>
-  <button id="nextBtn">次へ ▶</button>
+  <div id="question"></div>
+  <ul id="options"></ul>
+  <div id="progress"></div>
+  <button id="nextBtn">次へ ▶</button>
 </div>
 
 <div id="result" style="display:none;"></div>
@@ -57,93 +57,124 @@
 let questions=[],current=0,score=0;
 
 document.querySelectorAll('.tag-btn').forEach(btn=>{
-  btn.onclick=()=>startQuiz(btn.dataset.tag);
+  btn.onclick=()=>startQuiz(btn.dataset.tag);
 });
 
+/**
+ * CSVファイルを読み込み、問題オブジェクトの配列を返します。
+ * (変更点：選択肢可変対応、難易度削除、エラーハンドリング追加)
+ */
 async function loadCSV(file){
-  const text=await (await fetch(file)).text();
-  return text.trim().split(/\r?\n/).slice(1).map(line=>{
-    const c=line.split(",");
-    return {
-      q: c[1],
-      options: c.slice(2,6),
-      answer: +c[6]-1,
-      explanation: c[7],
-      difficulty: (c[8]||'').trim()
-    };
-  });
+  try {
+    const text=await (await fetch(file)).text();
+    return text.trim().split(/\r?\n/).slice(1).map(line=>{
+      const c=line.split(",");
+      // ID(0), 問(1), 選択肢1(2), 答(3), 解説(4) -> 最低5列
+      if (c.length < 5) return null; 
+
+      const lastIdx = c.length - 1;
+      const answerIdx = lastIdx - 1;
+
+      return {
+        q: c[1], // 1列目: 問題文
+        // 2列目から「答え」の列の直前までを選択肢
+        options: c.slice(2, answerIdx),
+        // 最後から2番目の列を「答え」 (1始まりなので -1 する)
+        answer: +c[answerIdx] - 1,
+        // 最後の列を「解説」
+        explanation: c[lastIdx]
+      };
+    }).filter(q => q !== null); // 不正な行(null)を取り除く
+  } catch (err) {
+    console.error("CSV load error:", err);
+    alert("問題ファイルの読み込みに失敗しました。ファイル名や場所を確認してください。");
+    // エラーが起きたらコントロールを再表示
+    document.getElementById('controls').style.display=''; 
+    document.getElementById('mainTitle').style.display='block';
+    return []; // 空の配列を返す
+  }
 }
 
 function shuffle(a){
-  for(let i=a.length-1;i>0;i--){
-    const j=Math.floor(Math.random()*(i+1));
-    [a[i],a[j]]=[a[j],a[i]];
-  }
-  return a;
+  for(let i=a.length-1;i>0;i--){
+    const j=Math.floor(Math.random()*(i+1));
+    [a[i],a[j]]=[a[j],a[i]];
+  }
+  return a;
 }
 
 function csvFileName(tag){
-  return {
-    info1:'info1.csv',
-    info2:'info2.csv',
-    appA:'appA.csv',
-    appB:'appB.csv'
-  }[tag];
+  return {
+    info1:'info1.csv',
+    info2:'info2.csv',
+    appA:'appA.csv',
+    appB:'appB.csv'
+  }[tag];
 }
 
 async function startQuiz(tag){
-  document.getElementById('controls').style.display='none';
-  document.getElementById('mainTitle').style.display='none'; // タイトル非表示
+  document.getElementById('controls').style.display='none';
+  document.getElementById('mainTitle').style.display='none'; // タイトル非表示
+  
   const pool=await loadCSV(csvFileName(tag));
-  questions=shuffle(pool).slice(0,20); // 各授業20問固定
-  current=score=0;
-  document.getElementById('result').style.display='none';
-  document.getElementById('quiz').style.display='';
-  showQuestion();
+  // poolが空（読込失敗）の場合は何もしない
+  if (!pool || pool.length === 0) return; 
+
+  questions=shuffle(pool).slice(0,20); // 各授業20問固定
+  current=score=0;
+  document.getElementById('result').style.display='none';
+  document.getElementById('quiz').style.display='';
+  showQuestion();
 }
 
 function showQuestion(){
-  const q=questions[current];
-  document.getElementById('question').textContent=q.q;
-  const ul=document.getElementById('options'); ul.innerHTML='';
-  q.options.forEach((opt,i)=>{
-    const li=document.createElement('li');
-    li.innerHTML=`<button>${opt}</button>`;
-    li.firstChild.onclick=()=>selectAnswer(i);
-    ul.appendChild(li);
-  });
-  document.getElementById('progress').textContent=`${current+1}/${questions.length}`;
+  const q=questions[current];
+  document.getElementById('question').textContent=q.q;
+  const ul=document.getElementById('options'); ul.innerHTML='';
+  q.options.forEach((opt,i)=>{
+    const li=document.createElement('li');
+    li.innerHTML=`<button>${opt}</button>`;
+    li.firstChild.onclick=()=>selectAnswer(i);
+    ul.appendChild(li);
+  });
+  document.getElementById('progress').textContent=`${current+1}/${questions.length}`;
 }
 
 function selectAnswer(idx){
-  const q=questions[current],ul=document.getElementById('options');
-  [...ul.children].forEach((li,i)=>{
-    const b=li.firstChild; b.disabled=true;
-    if(i===q.answer)b.style.background='lightgreen';
-    else if(i===idx)b.style.background='salmon';
-  });
-  const quiz=document.getElementById('quiz');
+  const q=questions[current],ul=document.getElementById('options');
+  [...ul.children].forEach((li,i)=>{
+    const b=li.firstChild; b.disabled=true;
+    if(i===q.answer)b.style.background='lightgreen';
+    else if(i===idx)b.style.background='salmon';
+  });
+  const quiz=document.getElementById('quiz');
+  
   const msg=document.createElement('p');
-  msg.innerHTML=(idx===q.answer
-    ? (score++,'<span style="color:green">🟢 正解！</span>')
-    : `<span style="color:red">❌ 不正解</span><br><span style="color:#555">正解: ${q.options[q.answer]}</span>`);
-  const exp=document.createElement('p'); exp.textContent="解説: "+q.explanation;
-  quiz.append(msg,exp);
-  const next=document.getElementById('nextBtn');
-  next.style.display='block';
-  next.onclick=()=>{
-    msg.remove(); exp.remove(); next.style.display='none';
-    if(++current<questions.length)showQuestion(); else showResults();
-  };
+  // (変更点：可読性向上のためif文に変更)
+  if (idx === q.answer) {
+    score++;
+    msg.innerHTML = '<span style="color:green">🟢 正解！</span>';
+  } else {
+    msg.innerHTML = `<span style="color:red">❌ 不正解</span><br><span style="color:#555">正解: ${q.options[q.answer]}</span>`;
+  }
+
+  const exp=document.createElement('p'); exp.textContent="解説: "+q.explanation;
+  quiz.append(msg,exp);
+  const next=document.getElementById('nextBtn');
+  next.style.display='block';
+  next.onclick=()=>{
+    msg.remove(); exp.remove(); next.style.display='none';
+    if(++current<questions.length)showQuestion(); else showResults();
+  };
 }
 
 function showResults(){
-  document.getElementById('quiz').style.display='none';
-  const r=document.getElementById('result');
-  r.innerHTML=`<h2>結果: ${score}/${questions.length}</h2>`;
-  r.style.display='';
-  document.getElementById('controls').style.display='';
-  document.getElementById('mainTitle').style.display='block'; // タイトル再表示
+  document.getElementById('quiz').style.display='none';
+  const r=document.getElementById('result');
+  r.innerHTML=`<h2>結果: ${score}/${questions.length}</h2>`;
+  r.style.display='';
+  document.getElementById('controls').style.display='';
+  document.getElementById('mainTitle').style.display='block'; // タイトル再表示
 }
 </script>
 </body>
