--- a/index.html
+++ b/index.html
@@ -109,9 +109,7 @@
   });
 
   /**
-   * ▼▼▼ 修正点 ▼▼▼
    * loadCSV関数を、" (ダブルクォート) に対応したCSVパーサーに置き換えました。
-   * これにより、"RGB (Red, Green, Blue)" のようなカンマを含むデータを扱えます。
    */
   async function loadCSV(file){
     const text = await (await fetch(file)).text();
@@ -240,13 +238,13 @@
     msg.innerHTML=(idx===q.answer
       ? (score++,'<span style="color:green">🟢 正解！</span>')
       : `<span style="color:red">❌ 不正解</span><br><span style="color:#555">正解: ${q.options[q.answer]}</span>`);
-    const exp=document.createElement('p'); exp.textContent="解説: "+q.explanation;
+  s    const exp=document.createElement('p'); exp.textContent="解説: "+q.explanation;
     quiz.append(msg,exp);
     const next=document.getElementById('nextBtn');
     next.style.display='block';
     next.onclick=()=>{
-      msg.remove(); exp.remove(); next.style.display='none';
-      if(++current<questions.length)showQuestion(); else showResults();
+    	msg.remove(); exp.remove(); next.style.display='none';
+    	if(++current<questions.length)showQuestion(); else showResults();
     };
   }
 
@@ -255,4 +253,9 @@
     const r=document.getElementById('result');
     r.innerHTML=`<h2>結果: ${score}/${questions.length}</h2>`;
     r.style.display='';
-  D
+    document.getElementById('controls').style.display='';
+    document.getElementById('mainTitle').style.display='block';
+  }
+</script>
+</body>
+</html>
