--- a/index.html
+++ b/index.html
@@ -171,92 +171,4 @@
   }
 
   function shuffle(a){
-    for(let i=a.length-1;i>0;i--){
-      const j=Math.floor(Math.random()*(i+1));
-      [a[i],a[j]]=[a[j],a[i]];
-    }
-    return a;
-  }
-
-  function csvFileName(tag){
-    return {
-      info1:'info1.csv',
-      info2:'info2.csv',
-      appA:'appA.csv',
-      appB:'appB.csv'
-    }[tag];
-  }
-
-  async function startQuiz(tag){
-    document.getElementById('controls').style.display='none';
-    document.getElementById('mainTitle').style.display='none'; 
-    
-    let pool;
-    try {
-      pool = await loadCSV(csvFileName(tag));
-    } catch(err) {
-      console.error("CSV Load Error:", err);
-      pool = []; 
-    }
-
-    if (!pool || pool.length === 0) {
-        alert("問題ファイルの読み込みに失敗しました。ファイル名や場所を確認してください。");
-        document.getElementById('controls').style.display=''; 
-        document.getElementById('mainTitle').style.display='block';
-        return;
-    }
-
-    questions=shuffle(pool).slice(0,20); 
-    current=score=0;
-    document.getElementById('result').style.display='none';
-    document.getElementById('quiz').style.display='';
-    showQuestion();
-  }
-
-  function showQuestion(){
-    const q=questions[current];
-    document.getElementById('question').textContent=q.q;
-    const ul=document.getElementById('options'); ul.innerHTML='';
-    q.options.forEach((opt,i)=>{
-      const li=document.createElement('li');
-      li.innerHTML=`<button>${opt}</button>`;
-      li.firstChild.onclick=()=>selectAnswer(i);
-      ul.appendChild(li);
-    });
-    document.getElementById('progress').textContent=`${current+1}/${questions.length}`;
-  }
-
-  function selectAnswer(idx){
-    const q=questions[current],ul=document.getElementById('options');
-    [...ul.children].forEach((li,i)=>{
-      const b=li.firstChild; b.disabled=true;
-      if(i===q.answer)b.style.background='lightgreen';
-      else if(i===idx)b.style.background='salmon'; 
-    });
-    const quiz=document.getElementById('quiz');
-    const msg=document.createElement('p');
-    msg.innerHTML=(idx===q.answer
-      ? (score++,'<span style="color:green">🟢 正解！</span>')
-      : `<span style="color:red">❌ 不正解</span><br><span style="color:#555">正解: ${q.options[q.answer]}</span>`);
-    // ↓↓↓↓ 修正点：ここにあった 's' を削除しました ↓↓↓↓
-    const exp=document.createElement('p'); exp.textContent="解説: "+q.explanation;
-    quiz.append(msg,exp);
-    const next=document.getElementById('nextBtn');
-    next.style.display='block';
-    next.onclick=()=>{
-    	msg.remove(); exp.remove(); next.style.display='none';
-    	if(++current<questions.length)showQuestion(); else showResults();
-    };
-  }
-
-  function showResults(){
-    document.getElementById('quiz').style.display='none';
-    const r=document.getElementById('result');
-  s  r.innerHTML=`<h2>結果: ${score}/${questions.length}</h2>`;
-    r.style.display='';
-    document.getElementById('controls').style.display='';
-    document.getElementById('mainTitle').style.display='block';
-  }
-</script>
-</body>
-</html>
+    for(let i=a.length-1;i>0;
